openshift/backend_app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app-backend                                                               #заменить на название своего сервиса
  name: 'test-app-backend'                                 #заменить на название своего сервиса
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: 'test-app-backend'                       #заменить на название своего сервиса. Обязательно должно соответствовать полю /metadata/name в вашем dc.yaml
  type: ClusterIP
